# LAMPSimulator

./: CMakeLists.txt  README.md
LAMPSimulator/: CMakeLists.txt  LAMPSimulator.cpp  LAMPSimulator.h
optimizer/: optimizer.py  stitch_confs.py
test/polybench-c-4.2.1-beta/: compile.sh  compile_run_validate_all_combinations.sh  run.sh
test/polybench-c-4.2.1-beta-lamp/: _all_combination.txt  compile.sh  compile_run_validate_all_combinations.sh  run.sh  validate.py
test/polybench-c-4.2.1-beta-lamp/benchs/: 2mm.c  2mm.h  3mm.c  3mm.h  atax.c  atax.h  bicg.c  bicg.h  doitgen.c  doitgen.h  gemm.c  gemm.h  gemver.c  gemver.h  gesummv.c  gesummv.h  mvt.c  mvt.h  trmm.c  trmm.h
test/polybench-c-4.2.1-beta-lamp/utilities/: benchmark_list  polybench.h
